--- a/src/Makefile
+++ b/src/Makefile
@@ -121,6 +121,7 @@ cloudfs: $(BUILD)/bin/cloudfs
 
 CLOUDFS_OBJS = $(BUILD)/obj/cloudfs.o \
                $(BUILD)/obj/cloudapi.o \
+               $(BUILD)/obj/mydedup.o \
                $(BUILD)/obj/main.o
 #You can append other objects
 
