--- a/src/Makefile
+++ b/src/Makefile
@@ -123,6 +123,7 @@ CLOUDFS_OBJS = $(BUILD)/obj/cloudfs.o \
                $(BUILD)/obj/cloudapi.o \
                $(BUILD)/obj/mydedup.o \
                $(BUILD)/obj/mycache.o \
+               $(BUILD)/obj/mysnapshot.o \
                $(BUILD)/obj/main.o
 #You can append other objects
 
